--- a/src/app/pages/chatbot/chatbot.page.html
+++ b/src/app/pages/chatbot/chatbot.page.html
@@ -3,7 +3,7 @@
 <ion-content class="main">
   <h1 class="center2">SweatSession-Bot</h1>
   <br>
-  <ion-list>
+  <ion-list class="transparent-list">
     
     <ion-item lines="none" *ngFor="let message of messages">
      
