--- a/src/app/pages/messages/chatroom/chatroom.component.html
+++ b/src/app/pages/messages/chatroom/chatroom.component.html
@@ -1,5 +1,6 @@
 <ion-header>
   <ion-toolbar>
+   <ion-item lines="none">
     <ion-buttons slot="start">
       <backbutton (click)="removeSession()"></backbutton>
     </ion-buttons>
@@ -23,6 +24,7 @@
         </ion-item>
       </ng-template>
     </ion-popover>
+   </ion-item>
   </ion-toolbar>
 </ion-header>
 
