--- a/src/app/pages/messages/messages.page.html
+++ b/src/app/pages/messages/messages.page.html
@@ -3,8 +3,8 @@
     <div class="inner-container">
       <ion-header>
         <ion-segment (ionChange)="onSegmentChange($event)" value="chats">
-          <ion-segment-button value="chats">chats</ion-segment-button>
-          <ion-segment-button value="groups">groups</ion-segment-button>
+          <ion-segment-button value="chats">Chats</ion-segment-button>
+          <ion-segment-button value="groups">Groups</ion-segment-button>
         </ion-segment>
       </ion-header>
       
