--- a/src/app/pages/points/points.page.html
+++ b/src/app/pages/points/points.page.html
@@ -1,7 +1,7 @@
-<ion-header style="background-color: #E63946;">
+<ion-header>
   <ion-toolbar>
     <ion-item lines="none">
-      <backbutton class="larger-back-button"></backbutton>
+      <backbutton></backbutton>
       <ion-title style="margin-left: 0rem;">Points</ion-title>
     </ion-item>
   </ion-toolbar>
