--- a/src/app/pages/workout-scheduling/workout-scheduling.page.html
+++ b/src/app/pages/workout-scheduling/workout-scheduling.page.html
@@ -1,8 +1,7 @@
-<ion-header [translucent]="true">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+<ion-header>
   <ion-toolbar>
     <ion-item lines="none">
-      <backbutton class="larger-back-button"></backbutton>
+      <backbutton></backbutton>
       <ion-title>Workout Schedule</ion-title>
     </ion-item>
   </ion-toolbar>
