--- a/src/global.scss
+++ b/src/global.scss
@@ -122,3 +122,7 @@ swiper-container::part(bullet-active) {
     padding-top:18px;
     padding-bottom: 0px;
 }
+
+.transparent-list {
+    background-color: transparent;
+}
