--- a/src/app/pages/messages/group-chatroom/group-chatroom.component.html
+++ b/src/app/pages/messages/group-chatroom/group-chatroom.component.html
@@ -1,18 +1,20 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <backbutton (click)="removeSession()"></backbutton>
-    </ion-buttons>
-    <ion-title>
-      <ion-chip id="group-name">
-        <ion-avatar>
-          <ion-img alt="Silhouette of a person's head" [src]="group.profileURL"/>
-        </ion-avatar>
-        <ion-label>
-          {{group.displayName}}
-        </ion-label>
-      </ion-chip>
-    </ion-title>
+    <ion-item lines="none">
+      <ion-buttons>
+        <backbutton (click)="removeSession()"></backbutton>
+      </ion-buttons>
+      <ion-title>
+        <ion-chip id="group-name">
+          <ion-avatar>
+            <ion-img alt="Silhouette of a person's head" [src]="group.profileURL"/>
+          </ion-avatar>
+          <ion-label>
+            {{group.displayName}}
+          </ion-label>
+        </ion-chip>
+      </ion-title>
+    </ion-item>
   </ion-toolbar>
 </ion-header>
 
