--- a/src/app/pages/fitnessgoals/goalcard/goalcard.component.html
+++ b/src/app/pages/fitnessgoals/goalcard/goalcard.component.html
@@ -5,47 +5,38 @@
   </ion-segment>
 
   <ion-content [scrollEvents]="true" *ngIf="isLoading; else loaderContent">
-    <ion-item-sliding *ngFor="let goal of getFilteredGoals()">
-      <ion-card >
-        <ion-card>
+
+        <ion-card *ngFor="let goal of getFilteredGoals()">
+            <ion-item-sliding>
             <ion-item id="viewer">
                 <ion-icon name="basketball-outline"></ion-icon>
                 <ion-text>
                     {{goal.name}}
                 </ion-text>
-                <ion-button slot="end" (click)="viewGoal(goal.id)">View</ion-button>
+                <ion-icon slot="end" name="chevron-forward-outline" (click)="viewGoal(goal.id)"></ion-icon>
+
             </ion-item>
 
             <ion-item-options>
                 <ion-item-option color="danger" (click)="confirmDelete( goal.id! )">Delete</ion-item-option>
             </ion-item-options>
-
-        </ion-card>
-    <div class="content">
+            </ion-item-sliding>
         <ion-card-content>
-            <ion-grid>
-                 
-                <ion-row>
-                    <ion-col>
-                            <ion-label>{{(goal.progress!)}} % Done</ion-label>
-                            <ion-progress-bar style = "height: 15px; border-radius: 10px" value = "{{goal.progress! / 100}}" ></ion-progress-bar>
-                    </ion-col>
-                </ion-row>
-                <ion-row>
-                    <ion-col>
-                        <ion-card-subtitle class="ion-text-wrap ion-text-sm">{{ goal.description }}</ion-card-subtitle>
-                    </ion-col>
-                </ion-row>
-                
-            </ion-grid>
-            <ion-icon name="alert-circle-outline"></ion-icon><ion-text class="schedule-value">{{getDaysleft(goal)}} Days Left</ion-text><br>
-            <ion-icon name="american-football-outline"></ion-icon><ion-text class="schedule-value">{{goal.Tasks!.length}} Tasks</ion-text><br>
-            <ion-icon name="calendar-outline"></ion-icon><ion-text class="schedule-value">Started: {{goal.startDate}}</ion-text><br>
-            <ion-icon name="alarm-outline"></ion-icon><ion-text class="schedule-value">Ending: {{goal.endDate}}</ion-text><br>
+            <ion-card-subtitle class="ion-text-wrap ion-text-sm">{{ goal.description }}</ion-card-subtitle>
+            <ion-progress-bar style = "height: 15px; border-radius: 10px" value = "{{goal.progress! / 100}}" ></ion-progress-bar>
+
+            <div style="padding-top: 20px">
+                <ion-icon name="speedometer-outline"></ion-icon><ion-text class="schedule-value">{{(goal.progress!)}}% Done</ion-text><br>
+                <ion-icon name="alert-circle-outline"></ion-icon><ion-text class="schedule-value">{{getDaysleft(goal)}} Days Left</ion-text><br>
+                <ion-icon name="american-football-outline"></ion-icon><ion-text class="schedule-value">{{goal.Tasks!.length}} Tasks</ion-text><br>
+                <ion-icon name="calendar-outline"></ion-icon><ion-text class="schedule-value">Started: {{goal.startDate}}</ion-text><br>
+                <ion-icon name="alarm-outline"></ion-icon><ion-text class="schedule-value">Ending: {{goal.endDate}}</ion-text><br>
+            </div>
+
         </ion-card-content>
-    </div>
-      </ion-card>
-    </ion-item-sliding>
+        </ion-card>
+
+
   </ion-content>
 
 <ng-template #loaderContent>
