--- a/src/app/pages/otheruserbadges/other-user-badges.page.scss
+++ b/src/app/pages/otheruserbadges/other-user-badges.page.scss
@@ -1,3 +1,10 @@
-.badgesContainer{
-    --ion-background-color: #F1FAEE;
+.badgesContainer {
+    // --ion-background-color: #F1FAEE;
+}
+
+h1 {
+    text-align: center;
+    position: absolute;
+    top: 40%;
+    width: 100%;
 }
