--- a/src/app/pages/notifications/notifications.page.scss
+++ b/src/app/pages/notifications/notifications.page.scss
@@ -57,8 +57,7 @@ ion-header{
 .flex-center3{
     display: flex;
     justify-content: center;
-    
-    
+    align-items: center ;
     border: radius 50px;
 
 }
