--- a/src/app/pages/notifications/notifications.page.scss
+++ b/src/app/pages/notifications/notifications.page.scss
@@ -67,4 +67,5 @@ ion-header{
 .right-align-label {
     display: flex;
     justify-content: flex-end; /* Align the content to the right */
+    padding-right: 5px;
   }
