--- a/src/app/pages/notifications/notifications.page.scss
+++ b/src/app/pages/notifications/notifications.page.scss
@@ -3,6 +3,11 @@
     --background: url('/assets/Asset 2.png') no-repeat center/contain fixed;
 }
 
+.main2{
+    --background: none;
+    
+}
+
 .flex-center{
     display: flex;
     justify-content: center;
