--- a/src/app/pages/groups/groups.page.html
+++ b/src/app/pages/groups/groups.page.html
@@ -9,37 +9,43 @@
     </ion-item>
   </ion-toolbar>
 </ion-header>
-<ion-content>
-  <ion-card *ngFor="let Group of Groups$">
+<ion-content *ngIf="groups.length > 0; else noGroups">
+  <ion-card *ngFor="let Group of groups">
     <ion-card-header>
-      <ion-card-subtitle>{{Group.description}}</ion-card-subtitle>
-      <ion-card-title>{{Group.name}}</ion-card-title>
+      <ion-card-subtitle>{{Group.bio}}</ion-card-subtitle>
+      <ion-card-title>{{Group.displayName}}</ion-card-title>
     </ion-card-header>
     <ion-card-content>
- 
-        <ion-item class = "groupPic">
-          <ion-img src={{Group.image}} alt="logo-image" class="image"></ion-img> 
-        </ion-item>
-
-      <!-- <ion-item>
-        <ion-icon name="people-outline" slot="start"></ion-icon>
-        <ion-label>{{Group.size}}</ion-label>
-      </ion-item> -->
+      <ion-item class = "groupPic" lines="none">
+        <ion-img [src]="Group.profileURL" alt="logo-image" class="image"></ion-img> 
+      </ion-item>
     </ion-card-content>
     
     
     <ion-card-content>
-      <ion-button slot = "start">
-          <ion-icon name="chatbox-outline" slot="start"></ion-icon>
-          <ion-label>Chat</ion-label>
-      </ion-button>
-  
-      <ion-button slot = "end">
+     <div class="button-container">
+      <ion-button (click)="stageGroup(Group)">
+        <ion-icon name="chatbox-outline" slot="start"></ion-icon>
+        <ion-label>Chats</ion-label>
+     </ion-button>
+
+      <ion-button>
         <ion-icon name="calendar-outline" slot="start"></ion-icon>
         <ion-label>View Workout</ion-label>
       </ion-button>
-
+     </div>
     </ion-card-content>
   </ion-card>
 </ion-content>
   
+
+<ng-template #noGroups>
+  <ion-content>
+   <div class="zero-content-container ">
+    <ion-icon class="large-icon" name="people"></ion-icon><br>
+    <ion-text>
+      You have no groups. Click the add button to search and discover new groups.
+    </ion-text>
+   </div>
+  </ion-content>
+</ng-template>
