--- a/src/app/pages/otheruser/otheruser.page.scss
+++ b/src/app/pages/otheruser/otheruser.page.scss
@@ -70,6 +70,8 @@ ion-button {
 .slide-header {
     width: 100%;
     background-color: #A8DADC;
+    background-color: #457b9d; //#A8DADC;
+    color: #A8DADC;
 
     .first-header {
         margin-top: 0px;
