--- a/src/app/pages/userprofile/userprofile.page.scss
+++ b/src/app/pages/userprofile/userprofile.page.scss
@@ -72,7 +72,9 @@ ion-button {
 
 .slide-header {
     width: 100%;
-    background-color: #A8DADC;
+    background-color: #457b9d; //#A8DADC;
+    color: #A8DADC;
+    // border: 2px solid #A8DADC;
     .first-header {
         margin-top: 0px;
     }
