--- a/src/app/pages/workout-scheduling/workout-scheduling.page.html
+++ b/src/app/pages/workout-scheduling/workout-scheduling.page.html
@@ -35,7 +35,7 @@
   [schedules] = "uncompletedSchedules"
   ></workout-schedule>
 
-  <ion-fab slot="fixed" vertical="bottom" horizontal="center">
+  <ion-fab slot="fixed" vertical="bottom" horizontal="end">
     <ion-fab-button (click)="addSchedule()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
