--- a/src/global.scss
+++ b/src/global.scss
@@ -126,3 +126,32 @@ swiper-container::part(bullet-active) {
 .transparent-list {
     background-color: transparent;
 }
+
+.large-icon {
+    width: 200px;
+    height: 200px;
+    color: #457B9D;
+    opacity: 0.9;
+}
+
+ion-button {
+    --background: #457b9d;
+    --background-hover: #A8DADC;
+    --background-activated: #A8DADC;
+    --background-focused: #A8DADC;
+    border-radius: 8px;
+  
+    --border-style: solid;
+    --border-width: 2px;
+    --border-color: #A8DADC;
+  
+    --color: white;
+}
+
+.zero-content-container {
+    width: 80%;
+    margin: auto;
+    padding: 10px;
+    text-align: center;
+    font-weight: bolder;
+}
