--- a/src/app/pages/messages/chatbox/chatbox.component.html
+++ b/src/app/pages/messages/chatbox/chatbox.component.html
@@ -22,7 +22,7 @@
       {{ message.text }}
     </div>
     <div class="message-timestamp">
-      {{ message.date?.toDate() | date:'MMM d, hh:mm a' }}
+      <p>{{ message.date?.toDate() | date:'MMM d, hh:mm a' }}</p>
     </div>
   </div>
 </div>
