--- a/src/app/pages/messages/messages.page.html
+++ b/src/app/pages/messages/messages.page.html
@@ -8,10 +8,10 @@
         </ion-segment>
       </ion-header>
       
-      <ion-list class="messages-list">
+      <ion-list class="messages-list" class="transparent-list">
         <div [hidden]="selectedSegment!=='chats'">
           <div *ngIf="chatFriends.length !== 0; else loaderContent" class="chatFriends-container">
-            <ion-item *ngFor="let chatFriend of chatFriends" (click)="stageUser(chatFriend.user)" lines="none">
+            <ion-item *ngFor="let chatFriend of chatFriends" (click)="stageUser(chatFriend.user)" lines="none" class="transparent-list">
               <ion-avatar slot="start" class="user-profile-img">
                 <img alt="Silhouette of a person's head" [src]="chatFriend.user.profileURL!" />
               </ion-avatar>
@@ -25,7 +25,7 @@
         </div>
 
         <div [hidden]="selectedSegment!=='groups'">
-          <ion-item *ngFor="let group of groups" lines="none" (click)="stageGroup(group)">
+          <ion-item *ngFor="let group of groups" lines="none" (click)="stageGroup(group)" class="transparent-list">
             <ion-avatar slot="start">
               <img alt="Silhouette of a person's head" [src]="group.profileURL"/>
             </ion-avatar>
