--- a/src/app/pages/search/usersearch/usersearch.component.html
+++ b/src/app/pages/search/usersearch/usersearch.component.html
@@ -1,6 +1,6 @@
 <div class="content-container">
   <ion-searchbar
-      placeholder="Search for users"
+      placeholder="Search for Users"
       [(ngModel)] = "searchTerms.searchQuery"
       (ionInput) = onSearchInput($event)
       color="light"
