--- a/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.html
+++ b/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.html
@@ -57,9 +57,9 @@
         </ion-row>
       </ion-grid>
     </ion-card-content>
-    <ion-card class="schedule-card">
+    <ion-card-content class="schedule-card">
       <ion-button expand="block" (click)="addSchedule()" [disabled]="!isValidInput()">Save</ion-button>
-    </ion-card>
+    </ion-card-content>
   </ion-card>
 </ion-content>
 
