--- a/src/app/pages/workout-scheduling/edit-schedule/edit-schedule.component.html
+++ b/src/app/pages/workout-scheduling/edit-schedule/edit-schedule.component.html
@@ -29,7 +29,7 @@
 
   <ion-item>
     <ion-label position="floating">
-      <ion-icon name="timer-outline"></ion-icon> Duration
+      <ion-icon name="timer-outline"></ion-icon> Duration (min)
     </ion-label>
     <ion-input type = "number" value="{{schedule.duration}}" [(ngModel)]="schedule.duration" (ionChange)="checkChange()"></ion-input>
   </ion-item>
