--- a/src/app/pages/search/group/group.component.html
+++ b/src/app/pages/search/group/group.component.html
@@ -1,6 +1,6 @@
 <div class="content-container">
   <ion-searchbar
-      placeholder="Search for groups"
+      placeholder="Search for Groups"
       [(ngModel)] = "searchTerms.searchQuery"
       (ionInput) = onSearchInput($event)
       color="light"
