--- a/src/app/pages/view-personalbests/view-personalbests.page.html
+++ b/src/app/pages/view-personalbests/view-personalbests.page.html
@@ -40,11 +40,11 @@
 
                     <ion-item>
                       <ion-label position="stacked">Weight</ion-label>
-                      <ion-input placeholder="Enter weight(Kg)" formControlName="weight" type="number"></ion-input>
+                      <ion-input placeholder="Enter Weight (kg)" formControlName="weight" type="number"></ion-input>
                     </ion-item>
 
                     <ion-item>
-                        <ion-label position="stacked">Repetition</ion-label>
+                        <ion-label position="stacked">Repetitions</ion-label>
                         <ion-input placeholder="Enter Reps" formControlName="reps" type="number"></ion-input>
                     </ion-item>
 
@@ -63,7 +63,7 @@
 
                     <ion-item>
                       <ion-label position="stacked">Notes</ion-label>
-                      <ion-input placeholder="Enter notes" formControlName="notes" type="txt"></ion-input>
+                      <ion-input placeholder="Enter Notes" formControlName="notes" type="txt"></ion-input>
                     </ion-item>
                         <ion-button type="submit" expand="full" [disabled]="!isValid(PersonalBestForm.value)"><ion-icon slot="start" name="checkmark"></ion-icon>Submit</ion-button>
                 </form>
